...
                                    :
                                    <Row>
                                        <Col>
                                            <Row size={1}>
                                                <View style={styles.container}>
                                                    <Icon type="FontAwesome" name="university"/>
                                                    <Text testID="dashboardTitle">
                                                        Add an account
                                                    </Text>
                                                </View>
                                            </Row>
                                            <Row size={1}/>
                                            <Row size={1}>
...
