...
                <Content>
                    <Grid>
                        <Row style={{height: 500, padding:10}}>
                            <Col style={styles.container}>
                                <Row size={1}/>
                                <Row size={1}>
                                    <Text testID="signUpConfirmationSentTitle" style={{fontSize: 30}}>Sign Up Email Sent</Text>
                                </Row>
                                <Row size={1}>
                                    <Text>
                                        A sign up confirmation has been sent to your email.
                                        Please click the link in the email to complete your registration.
                                    </Text>
...
